--- a/Express/static/style.css
+++ b/Express/static/style.css
@@ -1,3 +1,63 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+body::before {
+    opacity: 0.5;
+    content: "";
+    width: 100%;
+    height: 800px;
+    z-index: -1;
+    top: 0px;
+    position: absolute;
+    background: url(./gym-reopening.jpg) no-repeat center center;
+}
+
+nav {
+    background-color: grey;
+    padding: 3px 12px;
+}
+ul {
+    display: flex;
+    flex-direction: row;
+}
+li {
+    list-style: none;
+    padding: 3px 4px;
+}
+a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+h2 {
+    text-align: center;
+    color: black;
+}
+.container {
+    margin: 35px 0px;
+}
+input,
+textarea {
+    display: block;
+    padding: 23px;
+    margin: 15px auto;
+    width: 60%;
+    outline: none;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+.btn {
+    margin: 4px auto;
+    display: block;
+    padding: 5px 12px;
+    background: grey;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    border: 2px solid black;
+    border-radius: 9px;
+    cursor: pointer;
+    outline: none;
 }
