--- a/Express/Dance Website/static/style.css
+++ b/Express/Dance Website/static/style.css
@@ -5,21 +5,34 @@
     padding: 0px;
     font-family: "Lacquer";
 }
+#logo {
+    display: flex;
+    color: white;
+    align-items: center;
+    margin: 0px 14px;
+    font-size: 28px;
+    margin-right: 40px;
+}
+#logo img {
+    height: 42px;
+    filter: invert(1);
+}
+
 #navbar {
     background-color: black;
-    padding: 13px 14px;
+    padding: 18px 14px;
 }
 #navbar ul {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    align-items: center;
 }
 #navbar li {
     list-style: none;
 }
 #navbar li a {
     color: white;
-    font-size: 20px;
+    font-size: 30px;
     text-decoration: none;
     padding: 13px 20px;
 }
@@ -32,21 +45,66 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 35px;
+    font-size: 65px;
     flex-direction: column;
     background: center/cover no-repeat url("/static/dance1.jpg");
-    height: 300px;
+    height: 425px;
     background-color: red;
 }
 #introSection div.small {
-    font-size: 27px;
+    font-size: 52px;
     padding: 5px;
 }
-#sponsorsSection {
+#missionSection {
     height: 300px;
+    width: 67%;
+    margin: auto;
+}
+#missionSection h2 {
+    font-size: 36px;
+    text-align: center;
+    padding-top: 12px;
+}
+.card {
+    display: inline-block;
+    border: 2px solid black;
+    border-radius: 10px;
+    width: 30%;
+    margin: 23px 20px;
+    height: 209px;
+}
+.card h3 {
+    text-align: center;
+    margin: 0px 12px;
+    margin-top: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.card-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.card-img {
+    height: 131px;
+    padding: 0px 14px;
+    margin: 5px 9px;
+}
+.card-img img {
+    height: inherit;
+}
+.card-content {
+    padding: 0px 10px;
+}
+.card-content p {
+    font-size: 19px;
+}
+
+#sponsorsSection {
+    height: 326px;
     background-color: yellow;
 }
 #sponsorsSection h2 {
+    font-size: 36px;
     text-align: center;
     padding-top: 12px;
 }
