--- a/Express/Dance Website/views/index.pug
+++ b/Express/Dance Website/views/index.pug
@@ -6,6 +6,9 @@ html
     body 
         nav#navbar
         ul
+        div#logo
+        img(src="/static/img/logo.jpg")
+        | HDA
         li #[a(href="/") Home ]
         li #[a(href="/") About]
         li #[a(href="/") Services ]
@@ -17,6 +20,33 @@ html
         div.small Eat Sleep Dance Repeat
 section#missionSection
         h2 Our Mission
+div.card
+    h3 Dance Perfection
+        div.card-box
+            div.card-img
+                img(src="/static/img/dancer-01.png")
+
+            div.card-content
+                p This is the best dance academy of the universe.
+
+   div.card
+        h3 Dance the way you like
+  div.card-box
+            div.card-img
+                img(src="/static/img/dancer-02.png")
+
+            div.card-content
+                p This is the best dance academy of the universe.
+
+   div.card
+        h3 Expert Teaching 
+          div.card-box
+            div.card-img
+                img(src="/static/img/dancer-03.png")
+
+            div.card-content
+                p This is the best dance academy of the universe.
+
          section#sponsorsSection
         h2 Our Sponsors
 
