dance website 3rd page sponsor section designed

--- a/Express/Dance Website/views/index.pug
+++ b/Express/Dance Website/views/index.pug
@@ -49,9 +49,14 @@ div.card
 
          section#sponsorsSection
         h2 Our Sponsors
+            div#sponsors
+                img(src="/static/img/logo4.png",alt="Sponsor Image",class="spImage")
+                img(src="/static/img/logo1.png",alt="Sponsor Image",class="spImage")
+                img(src="/static/img/logo2.png",alt="Sponsor Image",class="spImage")
+                img(src="/static/img/logo3.png",alt="Sponsor Image",class="spImage")
 
         footer#footer
-         p our Footer here
+         p Copyright © 2022 AnkurDanceAcademy.com | All rights reserved
         script 
         include ../static/index.js
     
