--- a/Express/Dance Website/static/style.css
+++ b/Express/Dance Website/static/style.css
@@ -108,7 +108,21 @@
     text-align: center;
     padding-top: 12px;
 }
+#sponsors {
+    height: 191px;
+    max-width: 1000px;
+    margin: 27px auto;
+}
+.spImage {
+    height: 80%;
+    margin: 20px;
+}
 #footer {
-    height: 100px;
+    display: flex;
+    color: white;
+    height: 60px;
     background-color: black;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
 }
