--- a/Express/Dance Website/static/styleContact.css
+++ b/Express/Dance Website/static/styleContact.css
@@ -1,6 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Lacquer&display=swap");
+* {
+    margin: 0px;
+    box-sizing: border-box;
+    padding: 0px;
+}
 h1 {
     text-align: center;
     margin: 12px 0px;
+}
+.container {
+    min-height: 75vh;
+    margin: 43px 0px;
+}
+.container h1 {
+    font-family: "Lacquer";
+    font-size: 34px;
 }
 .myForm {
     display: flex;
@@ -16,4 +30,15 @@ h1 {
     border: 2px solid #9d8e8e;
     border-radius: 12px;
     outline: none;
+}
+.btn {
+    padding: 8px 16px;
+    font-size: 18px;
+    border: 2px solid black;
+    border-radius: 10px;
+    color: white;
+    background: #d43b3b;
+    cursor: pointer;
+    outline: none;
+    margin: 26px;
 }
