--- a/Express/Dance Website/views/contact.pug
+++ b/Express/Dance Website/views/contact.pug
@@ -6,10 +6,13 @@ block scripts
     include ../static/style.css
     include ../static/styleContact.css
     block content 
-    h1 Contact Us
-    form(action="/contact", method="post",class="myForm") 
-    input(type="text",class="myInput",name="name",placeholder="Enter your name")
-    input(type="text",class="myInput",name="phone",placeholder="Enter your phone number")
-    input(type="text",class="myInput",name="email",placeholder="Enter your email id")
-    input(type="text",class="myInput",name="address",placeholder="Enter your address")
-    input(type="text",class="myInput",name="desc",placeholder="Enter your concern")
+    div.container
+      h1 Contact Us
+      form(action="/contact", method="post",class="myForm") 
+      input(type="text",class="myInput",name="name",placeholder="Enter your name")
+      input(type="text",class="myInput",name="phone",placeholder="Enter your phone number")
+      input(type="text",class="myInput",name="email",placeholder="Enter your email id")
+      input(type="text",class="myInput",name="address",placeholder="Enter your address")
+      input(type="text",class="myInput",name="desc",placeholder="Enter your concern")
+      button(class="btn")
+        | Submit 
