--- a/Express/Dance Website/views/base.pug
+++ b/Express/Dance Website/views/base.pug
@@ -1,10 +1,10 @@
-docttype html
+Doctype
 html
   head
     title Ankur Dance Academy 
     block scripts
     block style
-  body
+     body
      nav#navbar
         ul
         div#logo
@@ -17,5 +17,5 @@ html
         li #[a(href="/contact") Contact us]
         block content
         block foot
-  footer#footer 
+        footer#footer 
          p Copyright © 2022 AnkurDanceAcademy.com | All rights reserved
