--- a/Express/Dance Website/static/styleContact.css
+++ b/Express/Dance Website/static/styleContact.css
@@ -10,7 +10,7 @@ h1 {
 }
 .container {
     min-height: 75vh;
-    margin: 43px 0px;
+    margin: 63px 0px;
 }
 .container h1 {
     font-family: "Lacquer";
@@ -26,13 +26,13 @@ h1 {
     font-size: 16px;
     width: 40%;
     padding: 9px;
-    margin: 8px;
+    margin: 0.8rem;
     border: 2px solid #9d8e8e;
     border-radius: 12px;
     outline: none;
 }
 .btn {
-    padding: 8px 16px;
+    padding: 10px 36px;
     font-size: 18px;
     border: 2px solid black;
     border-radius: 10px;
