--- a/Express/Dance Website/views/home.pug
+++ b/Express/Dance Website/views/home.pug
@@ -1,47 +1,55 @@
 extends base.pug
 block scripts
-  script(src='/static/index.js')
-  block style 
-  link(rel="stylesheet", href="../static/style.css .css")
+    script(src='/static/index.js')
+    block style 
+    link(rel="stylesheet", href="../static/style.css")
     block content 
 
         section#introSection
-        div Welcome to Ankur's Dance Academy
-        div.small Eat Sleep Dance Repeat
+                div Welcome to Ankur's Dance Academy
+                div.small Eat Sleep Dance Repeat
+
 
         section#missionSection
-        h2 Our Mission
-div.card
-    h3 Dance Perfection
-        div.card-box
-            div.card-img
-                img(src="/static/img/dancer-01.png")
+                h2 Our Mission
+            
+                div.card
+                        h3 Dance Perfection
+                        div.card-box
+                                div.card-img
+                                    img(src="/static/img/dancer-01.png")
 
-            div.card-content
-                p This is the best dance academy of the universe.
+                                div.card-content
+                                        p This is the best dance academy of the universe.
 
-    div.card
-        h3 Dance the way you like
-    div.card-box
-            div.card-img
-                img(src="/static/img/dancer-02.png")
 
-            div.card-content
-                p This is the best dance academy of the universe.
 
-    div.card
-        h3 Expert Teaching 
-          div.card-box
-            div.card-img
-                img(src="/static/img/dancer-03.png")
+                div.card
+                        h3 Dance the way you like
+                        div.card-box
+                                div.card-img
+                                    img(src="/static/img/dance-02.webp")
 
-            div.card-content
-                p This is the best dance academy of the universe.
+                                div.card-content
+                                        p This is the best dance academy of the universe.
+
+
+
+                div.card
+                        h3 Expert Teaching 
+                        div.card-box
+                                div.card-img
+                                    img(src="/static/img/dance-03.png")
+
+                                div.card-content
+                                        p This is the best dance academy of the universe.
+
+
 
         section#sponsorsSection
-        h2 Our Sponsors
-            div#sponsors
-                img(src="/static/img/logo4.png",alt="Sponsor Image",class="spImage")
-                img(src="/static/img/logo1.png",alt="Sponsor Image",class="spImage")
-                img(src="/static/img/logo2.png",alt="Sponsor Image",class="spImage")
-                img(src="/static/img/logo3.png",alt="Sponsor Image",class="spImage")
+                    h2 Our Sponsors
+                        div#sponsors
+                            img(src="/static/img/logo4.png",alt="Sponsor Image",class="spImage")
+                            img(src="/static/img/logo1.png",alt="Sponsor Image",class="spImage")
+                            img(src="/static/img/logo2.jpg",alt="Sponsor Image",class="spImage")
+                            img(src="/static/img/logo3.webp",alt="Sponsor Image",class="spImage")
