--- a/Express/Gym website/static/style.css
+++ b/Express/Gym website/static/style.css
@@ -1,22 +1,22 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
-    margin: 0px;
-    padding: 0px;
+    margin: 0rem;
+    padding: 0rem;
 }
 body::before {
     opacity: 0.5;
     content: "";
     width: 100%;
-    height: 800px;
+    height: 59.3rem;
     z-index: -1;
-    top: 0px;
+    top: 0rem;
     position: absolute;
-    background: url(./gym-reopening.jpg) no-repeat center center;
+    background: url(./gym-reopening.jpg) center;
 }
 
 nav {
     background-color: #302d2d;
-    padding: 3px 12px;
+    padding: 1rem 1rem;
 }
 ul {
     display: flex;
@@ -24,7 +24,7 @@ ul {
 }
 li {
     list-style: none;
-    padding: 3px 4px;
+    padding: 0.3rem 17rem;
 }
 a {
     text-decoration: none;
@@ -32,32 +32,33 @@ a {
     font-weight: bold;
 }
 h2 {
+    font-size: 2.2rem;
     text-align: center;
     color: black;
 }
 .container {
-    margin: 35px 0px;
+    margin: 3rem 0rem;
 }
 input,
 textarea {
     display: block;
-    padding: 23px;
-    margin: 15px auto;
+    padding: 1.1rem;
+    margin: 1.1rem auto;
     width: 60%;
     outline: none;
-    border: 2px solid black;
-    border-radius: 5px;
+    border: 0.2rem solid black;
+    border-radius: 0.4rem;
 }
 .btn {
-    margin: 4px auto;
+    margin: 0.2rem auto;
     display: block;
-    padding: 5px 12px;
+    padding: 0.7rem 2rem;
     background: #302d2d;
     color: white;
     font-weight: bold;
-    font-size: 15px;
-    border: 2px solid black;
-    border-radius: 9px;
+    font-size: 1rem;
+    border: 0.1rem solid black;
+    border-radius: 1rem;
     cursor: pointer;
     outline: none;
 }
