--- a/Express/Gym website/views/index.pug
+++ b/Express/Gym website/views/index.pug
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE 
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>#{title}</title>
         style 
-      include ../static/style.css;
+        link(rel="stylesheet", href="../static/style.css")
     </head>
     <body>
         <nav>
@@ -17,8 +17,8 @@
             </ul>
         </nav>
         <div class="container">
-            <h2>Get this gym membership for 60-FILL THIS FORM NOW!</h2>
-            <!-- <p>#{content}This is a plain html using pug</p>-->
+            <h2>Get this gym membership for 60$ -FILL THIS FORM NOW!</h2>
+            // <p>#{content}This is a plain html using pug</p>
             <form action="/" method="POST" id="contact">
                 <input type="text" name="name" id="name" placeholder="Enter your name" />
                 <input type="text" name="age" id="age"   placeholder="Enter your age"/>
