--- a/Express/Dance Website/static/style.css
+++ b/Express/Dance Website/static/style.css
@@ -1,26 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Lacquer&display=swap");
 * {
-    margin: 0px;
+    margin: 0rem;
     box-sizing: border-box;
-    padding: 0px;
+    padding: 0rem;
     font-family: "Lacquer";
 }
 #logo {
     display: flex;
     color: white;
     align-items: center;
-    margin: 0px 14px;
-    font-size: 28px;
-    margin-right: 40px;
+    margin: 0rem 1rem;
+    font-size: 2rem;
+    margin-right: 4rem;
 }
 #logo img {
-    height: 42px;
+    height: 4rem;
     filter: invert(1);
 }
 
 #navbar {
     background-color: black;
-    padding: 18px 14px;
+    padding: 1.5rem 1rem;
 }
 #navbar ul {
     display: flex;
@@ -32,51 +32,51 @@
 }
 #navbar li a {
     color: white;
-    font-size: 30px;
+    font-size: 3rem;
     text-decoration: none;
-    padding: 13px 20px;
+    padding: 1rem 2rem;
 }
 #navbar li a:hover {
     color: black;
 }
 #introSection {
-    padding-bottom: 40px;
+    padding-bottom: 4rem;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 65px;
+    font-size: 6rem;
     flex-direction: column;
     background: center/cover no-repeat url("/static/dance1.jpg");
-    height: 480px;
+    height: 30rem;
     background-color: red;
 }
 #introSection div.small {
-    font-size: 52px;
-    padding: 5px;
+    font-size: 5rem;
+    padding: 0.3rem;
 }
 #missionSection {
-    height: 330px;
+    height: 25rem;
     width: 67%;
     margin: auto;
 }
 #missionSection h2 {
-    font-size: 36px;
+    font-size: 3rem;
     text-align: center;
-    padding-top: 12px;
+    padding-top: 1.5rem;
 }
 .card {
     display: inline-block;
-    border: 2px solid black;
-    border-radius: 10px;
+    border: 0.2rem solid black;
+    border-radius: 0.5rem;
     width: 30%;
-    margin: 23px 20px;
-    height: 209px;
+    margin: 3rem 1rem;
+    height: 14rem;
 }
 .card h3 {
     text-align: center;
-    margin: 0px 12px;
-    margin-top: 24px;
+    margin: 0rem 1rem;
+    margin-top: 2rem;
     font-family: Arial, Helvetica, sans-serif;
 }
 .card-box {
@@ -85,44 +85,44 @@
     justify-content: space-between;
 }
 .card-img {
-    height: 131px;
-    padding: 0px 14px;
-    margin: 5px 9px;
+    height: 8rem;
+    padding: 0rem 0.5rem;
+    margin: 0.3rem 0.5rem;
 }
 .card-img img {
     height: inherit;
 }
 .card-content {
-    padding: 0px 10px;
+    padding: 0rem 0.2rem;
 }
 .card-content p {
-    font-size: 19px;
+    font-size: 1.2rem;
 }
 
 #sponsorsSection {
-    height: 300px;
+    height: 20rem;
     background-color: rgb(141, 141, 140);
 }
 #sponsorsSection h2 {
-    font-size: 36px;
+    font-size: 3rem;
     text-align: center;
     padding-top: 12px;
 }
 #sponsors {
-    height: 191px;
-    max-width: 1000px;
-    margin: 27px auto;
+    height: 12rem;
+    max-width: 80rem;
+    margin: 2rem auto;
 }
 .spImage {
     height: 80%;
-    margin: 20px;
+    margin: 1rem 4.3rem;
 }
 #footer {
     display: flex;
     color: white;
-    height: 60px;
+    height: 4rem;
     background-color: black;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 2rem;
 }
