--- a/Express/Dance Website/static/styleContact.css
+++ b/Express/Dance Website/static/styleContact.css
@@ -1,20 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Lacquer&display=swap");
 * {
-    margin: 0px;
+    margin: 0rem;
     box-sizing: border-box;
-    padding: 0px;
+    padding: 0rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+#background {
+    height: 59.25rem;
+    width: 100%;
+    background: url("/static/img/bg.webp");
+    opacity: 0.8;
+}
+
 h1 {
     text-align: center;
-    margin: 12px 0px;
+    margin: 1rem 0rem;
 }
 .container {
     min-height: 75vh;
-    margin: 63px 0px;
+    padding: 4rem 0rem;
 }
 .container h1 {
+    color: rgba(0, 1, 95, 0.8);
     font-family: "Lacquer";
-    font-size: 34px;
+    font-size: 6rem;
 }
 .myForm {
     display: flex;
@@ -23,22 +33,34 @@ h1 {
     align-items: center;
 }
 .myInput {
-    font-size: 16px;
+    background-color: hsl(0, 0%, 89%);
+    font-size: 1rem;
     width: 40%;
-    padding: 9px;
-    margin: 0.8rem;
-    border: 2px solid #9d8e8e;
-    border-radius: 12px;
+    padding: 0.83rem;
+    margin: 0.85rem;
+    border: 0.2rem solid #575454;
+    border-radius: 1rem;
     outline: none;
 }
 .btn {
-    padding: 10px 36px;
-    font-size: 18px;
-    border: 2px solid black;
-    border-radius: 10px;
+    padding: 0.8rem 2.5rem;
+    font-size: 1.4rem;
+    border: 0.2rem solid black;
+    border-radius: 1rem;
     color: white;
     background: #d43b3b;
     cursor: pointer;
     outline: none;
-    margin: 26px;
+    margin: 2rem;
+}
+.btn:hover {
+    padding: 0.8rem 2.5rem;
+    font-size: 1.4rem;
+    background: #006af5;
+    border: 0.2rem solid black;
+    border-radius: 1rem;
+    color: white;
+    cursor: pointer;
+    outline: none;
+    margin: 2rem;
 }
