--- a/Express/Dance Website/views/contact.pug
+++ b/Express/Dance Website/views/contact.pug
@@ -5,12 +5,14 @@ block style
     link(rel="stylesheet", href="../static/style.css")
     link(rel="stylesheet", href="../static/styleContact.css")
     block content 
+    div#background
         div.container
-            h1 Contact Us
+           h1  Contact Us
             form(action="/contact", method="post",class="myForm") 
                 input(type="text",class="myInput",name="name",placeholder="Enter your name")
                 input(type="text",class="myInput",name="phone",placeholder="Enter your phone number")
                 input(type="text",class="myInput",name="email",placeholder="Enter your email id")
+                input(type="password",class="myInput",name="password",placeholder="Enter your password")
                 input(type="text",class="myInput",name="address",placeholder="Enter your address")
                 input(type="text",class="myInput",name="desc",placeholder="Enter your concern")
                 button(class="btn")
