--- a/Express/Dance Website/views/contact.pug
+++ b/Express/Dance Website/views/contact.pug
@@ -4,7 +4,25 @@ block scripts
 block style 
     link(rel="stylesheet", href="../static/style.css")
     link(rel="stylesheet", href="../static/styleContact.css")
+
+
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
+
+
+
     block content 
+
+
+
+    <div class="icon-bar">
+    <a href="./"><i class="fa fa-home"></i></a>
+    <a class="active" href=""><i class="fa fa-address-book"></i></a>
+    </div>
+
+
+
+
+
     div#background
         div.container
            h1  Contact Us
