--- a/Express/Dance Website/views/home.pug
+++ b/Express/Dance Website/views/home.pug
@@ -3,7 +3,26 @@ block scripts
     script(src='/static/index.js')
     block style 
     link(rel="stylesheet", href="../static/style.css")
+
+
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
+
+
+
+
     block content 
+
+
+
+
+      
+        <div class="icon-bar">
+        <a class="active" href=""><i class="fa fa-home"></i></a>
+        <a href="contact"><i class="fa fa-address-book"></i></a>
+        </div>
+
+
+
         
         section#introSection
                 div Welcome to Ankur's Dance Academy
